# cmsc447-project

./: .gitignore  README.md  ability_data.csv  dataCleaning_pokemon.py  pokemon_data.csv  testing.py
CPP-Server/: Makefile  bufferll.cpp  clientconnection.cpp  clientconnection.h  comshandler.cpp  comshandler.h  constants.h  databuffer.cpp  fifo.cpp  fifo.h  netcoms.cpp  netcoms.h  server  server.cpp
CPP-Server/source_code/: bufferll.cpp  bufferll.h  clientconnection.cpp  clientconnection.h  comshandler.cpp  comshandler.h  constants.h  databuffer.cpp  databuffer.h  fifo.cpp  fifo.h  server.cpp  serversocket.cpp  serversocket.h  tester.cpp  tester.h  top_Level_manager.h  top_level_handler.cpp  top_level_handler.h
Pokedex/: Installed.txt  README.MD  index.html  script.js  style.css
dataGathering/: 447_dataClean_moves.ipynb  447_dataCleaning-Copy1.ipynb  447_dataCleaning.ipynb  447_dataclean_abilities.ipynb  447_dataclean_nature.ipynb  README.md  ability_data.csv  ability_names.csv  cleaning_helpers.py  dataCleaning_abilities.py  dataCleaning_moves.py  dataCleaning_nature.py  dataCleaning_pokemon.py  data_Cleaning_pokemon.ipynb  gather.py  move_data.csv  move_names.csv  nature_data.csv  pokemon_data.csv  scratch  testing.py  testing_samples.py
dataGathering/notebooks/: 447_dataCleaning.ipynb  (+2 more)
databaseScriptsNStuff/: README.md  checkPokemonTable.sql  config.ini  createDatabase.sql  database_test.ipynb  database_test.py  dropAbilityTable.sql  dropDatabase.sql  dropMovesTable.sql  dropNatureTable.sql  dropPokemonTable.sql  populateAbilityTable.sql  populateMovesTable.sql  populateNatureTable.sql  populatePokemonTable.sql
jsclient/: README.md  client.js  package-lock.json  package.json
rust-server/: .env  Cargo.toml  README.md  diesel.toml  rust-toolchain.toml
rust-server/src/: .env  lib.rs  main.rs
rust-server/src/dbquery/: mod.rs
rust-server/src/dbschema/: mod.rs
rust-server/src/jsonstructs/: mod.rs
rust-server/src/pokemonmodel/: mod.rs
(+4 files in other folders)
