[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0" }
ferris_print = { version = "0.1" }
futures = { version = "0.3" }
rocket = { version = "0.4" }
serde = { version = "1.0.147", features = ["derive",] }
serde_json = { version = "1.0.67" }
sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "mysql" ] }